[gd_scene load_steps=21 format=3 uid="uid://cslx47p78oeq5"]

[ext_resource type="Script" path="res://objects/player_character/player_character.gd" id="1_xerun"]
[ext_resource type="SpriteFrames" uid="uid://duxe3l1h5lco6" path="res://objects/player_character/player_character_sprite_frames.tres" id="2_ow2vn"]
[ext_resource type="PackedScene" uid="uid://bl21w1vkwwonw" path="res://objects/player_character/door_picker.tscn" id="4_fy85w"]
[ext_resource type="Script" path="res://objects/player_character/interactive_object_picker.gd" id="4_wr72p"]
[ext_resource type="PackedScene" uid="uid://bw3rsjk2oyny7" path="res://objects/player_character/item_picker.tscn" id="5_0ulav"]
[ext_resource type="Script" path="res://objects/item/item_container.gd" id="6_lfgvn"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4qcfm"]
radius = 25.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bofb7"]

[sub_resource type="Animation" id="Animation_23vs0"]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qyxms"]
resource_name = "down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"down", &"down"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_lc7tu"]
resource_name = "left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"right", &"right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_je6oq"]
resource_name = "right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"right", &"right"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="Animation" id="Animation_5ey6k"]
resource_name = "up"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"up", &"up"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:flip_h")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tj2tw"]
_data = {
"RESET": SubResource("Animation_23vs0"),
"down": SubResource("Animation_qyxms"),
"left": SubResource("Animation_lc7tu"),
"right": SubResource("Animation_je6oq"),
"up": SubResource("Animation_5ey6k")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wuob8"]
animation = &"up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k6nr6"]
animation = &"down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bs867"]
animation = &"right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rejoc"]
animation = &"left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_2nfox"]
blend_point_0/node = SubResource("AnimationNodeAnimation_wuob8")
blend_point_0/pos = Vector2(0, -0.9)
blend_point_1/node = SubResource("AnimationNodeAnimation_k6nr6")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_bs867")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_rejoc")
blend_point_3/pos = Vector2(-1, 0)
blend_mode = 1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_is8m2"]
graph_offset = Vector2(-408.92, 76.76)
nodes/direction/node = SubResource("AnimationNodeBlendSpace2D_2nfox")
nodes/direction/position = Vector2(-15, 136)
node_connections = [&"output", 0, &"direction"]

[node name="PlayerCharacter" type="CharacterBody2D" node_paths=PackedStringArray("container")]
motion_mode = 1
script = ExtResource("1_xerun")
handle_input = null
max_health = null
keys = null
container = NodePath("ItemContainer")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4qcfm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -42)
scale = Vector2(0.75, 0.75)
sprite_frames = ExtResource("2_ow2vn")
animation = &"right"

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Forward" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="InteractiveObjectPicker" type="ShapeCast2D" parent="Forward" node_paths=PackedStringArray("player")]
shape = SubResource("CircleShape2D_bofb7")
exclude_parent = false
target_position = Vector2(75, 0)
max_results = 1
collision_mask = 5
script = ExtResource("4_wr72p")
player = NodePath("../..")

[node name="DoorPicker" parent="." node_paths=PackedStringArray("user") instance=ExtResource("4_fy85w")]
user = NodePath("..")

[node name="ItemPicker" parent="." node_paths=PackedStringArray("user", "container") instance=ExtResource("5_0ulav")]
user = NodePath("..")
container = NodePath("../ItemContainer")

[node name="ItemContainer" type="Node" parent="."]
script = ExtResource("6_lfgvn")
max_items = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tj2tw")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tj2tw")
}
tree_root = SubResource("AnimationNodeBlendTree_is8m2")
anim_player = NodePath("../AnimationPlayer")
parameters/direction/blend_position = Vector2(0, 0.043)
